# feria-net

./: .gitignore  AGENTS.md  README.md  index.html  opencode.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agent/: BOOTSTRAP.md
.agent/skills/arrancar-proyecto/: SKILL.md
.agent/skills/elevar-ui-frontend/: critica.md
.agent/skills/revisar-cambios/: SKILL.md
.agents/skills/actuar-como-senior/: preferences.md
.cargo/: config.toml
.cerebro-operativo/: hub-path.txt
.codex/: BOOTSTRAP.md
.codex/agents/: analista-comercial.toml  arquitecto.toml  auditor-cumplimiento.toml  crear-agentes.toml  documentador.toml  especialista-seguridad.toml  experto-github.toml  implementador.toml  ingeniero-backend.toml  integrador-mcp.toml  orquestador.toml  qa-validador.toml  revisor.toml
.kilo/: BOOTSTRAP.md
.kilocode/: BOOTSTRAP.md
.opencode/: BOOTSTRAP.md
.opencode/agents/: analista-comercial.md  arquitecto.md  auditor-cumplimiento.md  crear-agentes.md  documentador.md  especialista-seguridad.md  experto-github.md  implementador.md  ingeniero-backend.md  integrador-mcp.md  orquestador.md  qa-validador.md  revisor.md
.questions/: QUESTION_TEMPLATE.md
.scripts/: dev.bat
.teams/: INDEX.md  TEAM_TEMPLATE.md
.teams/active/: TEAM-002-configurar-github-primer-commit.md  TEAM-004-epica-1-frontend.md  TEAM-006-epica-1-editions-frontend.md  TEAM-008-epica-1-cleanup-p3.md  TEAM-013-epica-3-delivery-frontend.md  TEAM-014-fix-h1-and-cleanups.md
.teams/archive/: TEAM-001-bootstrap-arranque.md  TEAM-002-configurar-github-primer-commit.md  TEAM-003-epica-1-backend.md  TEAM-004-epica-1-frontend.md  TEAM-005-epica-1-editions-backend.md  TEAM-006-epica-1-editions-frontend.md  TEAM-007-r1-enforce-backend.md  TEAM-008-epica-1-cleanup-p3.md  TEAM-009-epica-2-backend.md  TEAM-010-epica-2-frontend.md  TEAM-011-p2-get-cash-session.md  TEAM-012-epica-3-delivery-backend.md  TEAM-013-epica-3-delivery-frontend.md  TEAM-014-fix-h1-and-cleanups.md  TEAM-015-delivery-warning-ui.md  TEAM-016-epica-4-reports-backend.md  TEAM-017-epica-4-reports-frontend.md
.windsurf/: BOOTSTRAP.md
docs/: ARCHITECTURE.md  REGLAS_PROYECTO.md  SSOT.md  TODO.md  data-model.md  product-map.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: attractions.rs  cash_sessions.rs  delivery.rs  editions.rs  fairs.rs  mod.rs  offers.rs  reports.rs  sales.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/db/migrations/: V001__init.sql  V002__one_active_edition_per_fair.sql  V003__epica2_tpv.sql  mod.rs
src-tauri/src/db/repository/: attractions.rs  cash_sessions.rs  delivery_attempts.rs  editions.rs  fairs.rs  mod.rs  offers.rs  reports.rs  sales.rs  tickets.rs
src-tauri/src/delivery/: backend.rs  file.rs  format.rs  mod.rs  noop.rs  registry.rs  tests.rs  thermal.rs
src-tauri/src/domain/: attraction.rs  cash_session.rs  fair.rs  fair_edition.rs  mod.rs  offer.rs  report.rs  sale.rs  sale_line.rs  ticket.rs  ticket_delivery_attempt.rs
src/api/: tauri.ts
src/components/ui/: tabs.tsx  (+1 more)
src/layouts/: MainLayout.tsx
src/lib/: csv.ts  datetime.ts  editions.ts  errors.ts  money.ts  schemas.ts
src/pages/: AbrirCajaPage.tsx  AtraccionEditarPage.tsx  AtraccionNuevaPage.tsx  CajaDetallePage.tsx  CajasListadoPage.tsx  DashboardPage.tsx  EdicionDetallePage.tsx  EdicionEditarPage.tsx  EdicionNuevaPage.tsx  FeriaDetallePage.tsx  FeriaEditarPage.tsx  FeriaNuevaPage.tsx  FeriasListadoPage.tsx  InformesPage.tsx  NotFoundPage.tsx  PendingBackendPage.tsx  TpvPage.tsx
src/types/: domain.ts
(+66 files in other folders)
